--- a/MiniMeteo/src/app/app.component.html
+++ b/MiniMeteo/src/app/app.component.html
@@ -10,22 +10,25 @@
 <body>
   <div class="container">
     <div class="text-center mt-3">
-      <h1 class="h1">Little Meteo</h1>
+      <h1 class="h1">Minimeteo</h1>
       <p>Inserisci la città di cui vuoi visualizzare il meteo adesso</p>
     </div>
 
     <div class="mb-3">
-      <input type="text" placeholder="Enter the city" class="form-control input_text" id="cityInput">
+      <input type="text" placeholder="Enter the city" class="form-control input_text" id="cityInput" #citta>
       <div class="mt-2">
-        <button class="btn btn-primary submit" id="submitButton">Submit</button>
+        <button (click)="prendiMeteo(citta.value)" class="btn btn-primary submit" id="submitButton">Submit</button>
       </div>
     </div>
     <div class="mt-5">
       <div class="card" id="weatherCard">
-        <h1 class="card-title name" id="name"></h1>
-        <p class="card-text temp"></p>
-        <p class="card-text clouds"></p>
-        <p class="card-text desc"></p>
+        <h1 class="card-title name" id="name">{{nome}}</h1>
+        <p class="card-text temp">{{temp}}</p>
+        <div *ngIf="loading">
+        <p class="card-text feelslike">percepiti : {{feelslike}}</p>
+      </div>
+        <p class="card-text clouds">{{clouds}}</p>
+        <p class="card-text desc">{{desc}}</p>
       </div>
     </div>
   </div>
