--- a/MiniMeteo/src/app/app.component.html
+++ b/MiniMeteo/src/app/app.component.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>LIttle Meteo</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" integrity="60c08cb918438e418245a6d4ba83d492" crossorigin="anonymous">
 </head>
 <body>
   <div class="container">
@@ -23,16 +23,18 @@
     <div class="mt-5">
       <div class="card" id="weatherCard">
         <h1 class="card-title name" id="name">{{nome}}</h1>
-        <p class="card-text temp">{{temp}}</p>
-        <div *ngIf="loading">
-        <p class="card-text feelslike">percepiti : {{feelslike}}</p>
-      </div>
-        <p class="card-text clouds">{{clouds}}</p>
-        <p class="card-text desc">{{desc}}</p>
+        <p class="card-text temp"*ngIf="loading"><strong> Gradi:</strong>  {{temp}}</p>
+        <p class="card-text feelslike"*ngIf="loading"><strong>Gradi Percepiti:</strong> {{feelslike}}</p>
+        <p class="card-text clouds"*ngIf="loading"><strong>Percentuale Nuvolosa:</strong> {{clouds}}</p>
+        <p class="card-text desc" *ngIf="loading"> <strong>Cielo:</strong> {{ traduciDesc(desc) }}</p> 
+
+        <p class="card-text desc" *ngIf="loading">
+          <strong>Cielo:</strong> {{ traduciDesc(desc) }}
+          <span [innerHTML]="getIcon(desc)"></span>
+      </p>
+      
       </div>
     </div>
   </div>
-
-  <script src="app.js"></script>
 </body>
 </html>
